--- a/public/index.html
+++ b/public/index.html
@@ -9,35 +9,83 @@
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Push Portal</title>
+        <link rel="manifest" href="/site.webmanifest" />
+        <!--
+          Notice the use of %PUBLIC_URL% in the tags above.
+          It will be replaced with the URL of the `public` folder during the build.
+          Only files inside the `public` folder can be referenced from the HTML.
+          Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+          work correctly both with client-side routing and a non-root public URL.
+          Learn how to configure a non-root public URL by running `npm run build`.
+        -->
+        <!-- HTML Meta Tags -->
+        <title>
+            Push App (Previously EPNS) | Communication Protocol of Web3
+        </title>
+        <meta
+            name="description"
+            content="Push App (Previously EPNS) | Communication Protocol of Web3"
+        />
+
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://portal.push.org" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Push Portal" />
+        <meta
+            property="og:description"
+            content="Push Portal (Previously EPNS) | Communication Protocol of Web3"
+        />
+        <meta
+            property="og:image"
+            content="https://portal.push.org/static/assets/previews/homepage-preview.webp"
+        />
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="twitter:domain" content="portal.push.org" />
+        <meta property="twitter:url" content="https://portal.push.org" />
+        <meta name="twitter:title" content="Push App (Previously EPNS)" />
+        <meta
+            name="twitter:description"
+            content="Push Portal (Previously EPNS) | Communication Protocol of Web3"
+        />
+        <meta
+            name="twitter:image"
+            content="https://portal.push.org/static/assets/previews/homepage-twitter-preview.webp"
+        />
+
+        <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+        <script>
+            // Single Page Apps for GitHub Pages
+            // MIT License
+            // https://github.com/rafgraph/spa-github-pages
+            // This script checks to see if a redirect is present in the query string,
+            // converts it back into the correct url and adds it to the
+            // browser's history using window.history.replaceState(...),
+            // which won't cause the browser to attempt to load the new url.
+            // When the single page app is loaded further down in this file,
+            // the correct url will be waiting in the browser's history for
+            // the single page app to route accordingly.
+            (function (l) {
+                if (l.search[1] === "/") {
+                    var decoded = l.search
+                        .slice(1)
+                        .split("&")
+                        .map(function (s) {
+                            return s.replace(/~and~/g, "&");
+                        })
+                        .join("?");
+                    window.history.replaceState(
+                        null,
+                        null,
+                        l.pathname.slice(0, -1) + decoded + l.hash,
+                    );
+                }
+            })(window.location);
+        </script>
     </head>
-    <script>
-        // Single Page Apps for GitHub Pages
-        // MIT License
-        // https://github.com/rafgraph/spa-github-pages
-        // This script checks to see if a redirect is present in the query string,
-        // converts it back into the correct url and adds it to the
-        // browser's history using window.history.replaceState(...),
-        // which won't cause the browser to attempt to load the new url.
-        // When the single page app is loaded further down in this file,
-        // the correct url will be waiting in the browser's history for
-        // the single page app to route accordingly.
-        (function (l) {
-            if (l.search[1] === "/") {
-                var decoded = l.search
-                    .slice(1)
-                    .split("&")
-                    .map(function (s) {
-                        return s.replace(/~and~/g, "&");
-                    })
-                    .join("?");
-                window.history.replaceState(
-                    null,
-                    null,
-                    l.pathname.slice(0, -1) + decoded + l.hash,
-                );
-            }
-        })(window.location);
-    </script>
+
     <body>
         <div id="root"></div>
         <script type="module" src="../src/main.tsx"></script>
