--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,13 @@
             type="image/svg+xml"
             href="./static/assets/website/favicon.ico"
         />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Push Portal</title>
-        <link rel="manifest" href="/site.webmanifest" />
-        <!--
-          Notice the use of %PUBLIC_URL% in the tags above.
-          It will be replaced with the URL of the `public` folder during the build.
-          Only files inside the `public` folder can be referenced from the HTML.
-          Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-          work correctly both with client-side routing and a non-root public URL.
-          Learn how to configure a non-root public URL by running `npm run build`.
-        -->
+
         <!-- HTML Meta Tags -->
-        <title>
-            Push App (Previously EPNS) | Communication Protocol of Web3
-        </title>
+        <title>Push Portal</title>
         <meta
             name="description"
-            content="Push App (Previously EPNS) | Communication Protocol of Web3"
+            content="Push Portal (Previously EPNS) | Communication Protocol of Web3
+        "
         />
 
         <!-- Facebook Meta Tags -->
@@ -33,25 +22,27 @@
         <meta property="og:title" content="Push Portal" />
         <meta
             property="og:description"
-            content="Push Portal (Previously EPNS) | Communication Protocol of Web3"
+            content="Push Portal (Previously EPNS) | Communication Protocol of Web3
+        "
         />
         <meta
             property="og:image"
-            content="https://portal.push.org/static/assets/previews/homepage-preview.webp"
+            content="https://opengraph.b-cdn.net/production/images/cc7702ad-595a-4d26-ae54-9309a2c9f6aa.png?token=CBq5Ke9jm230h7PvaSX-Iy2BX_DMvIez2GusAQacsCg&height=630&width=1200&expires=33278331680"
         />
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image" />
         <meta property="twitter:domain" content="portal.push.org" />
         <meta property="twitter:url" content="https://portal.push.org" />
-        <meta name="twitter:title" content="Push App (Previously EPNS)" />
+        <meta name="twitter:title" content="Push Portal" />
         <meta
             name="twitter:description"
-            content="Push Portal (Previously EPNS) | Communication Protocol of Web3"
+            content="Push Portal (Previously EPNS) | Communication Protocol of Web3
+        "
         />
         <meta
             name="twitter:image"
-            content="https://portal.push.org/static/assets/previews/homepage-twitter-preview.webp"
+            content="https://opengraph.b-cdn.net/production/images/cc7702ad-595a-4d26-ae54-9309a2c9f6aa.png?token=CBq5Ke9jm230h7PvaSX-Iy2BX_DMvIez2GusAQacsCg&height=630&width=1200&expires=33278331680"
         />
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
