fix: update root index file

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
             type="image/svg+xml"
             href="./static/assets/website/favicon.ico"
         />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- HTML Meta Tags -->
         <title>Push Portal</title>
