--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Push Portal</title>
+        <meta
+            name="description"
+            content="Push Portal (Previously EPNS) | Communication Protocol of Web3"
+        />
+
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://portal.push.org" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Push Portal" />
+        <meta
+            property="og:description"
+            content="Push Portal (Previously EPNS) | Communication Protocol of Web3"
+        />
+        <meta
+            property="og:image"
+            content="https://opengraph.b-cdn.net/production/images/cc7702ad-595a-4d26-ae54-9309a2c9f6aa.png?token=CBq5Ke9jm230h7PvaSX-Iy2BX_DMvIez2GusAQacsCg&height=630&width=1200&expires=33278331680"
+        />
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="twitter:domain" content="portal.push.org" />
+        <meta property="twitter:url" content="https://portal.push.org" />
+        <meta name="twitter:title" content="Push Portal" />
+        <meta
+            name="twitter:description"
+            content="Push Portal (Previously EPNS) | Communication Protocol of Web3"
+        />
+        <meta
+            name="twitter:image"
+            content="https://opengraph.b-cdn.net/production/images/cc7702ad-595a-4d26-ae54-9309a2c9f6aa.png?token=CBq5Ke9jm230h7PvaSX-Iy2BX_DMvIez2GusAQacsCg&height=630&width=1200&expires=33278331680"
+        />
     </head>
     <script>
         if (global === undefined) {
