--- a/pr-preview/pr-12/rewards.html
+++ b/pr-preview/pr-12/rewards.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link
+            rel="icon"
+            type="image/svg+xml"
+            href="/push-portal/pr-preview/pr-12/assets/favicon-B1N9kfo0.ico"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Push Chain Rewards S2</title>
 
@@ -15,7 +20,7 @@
         />
         <meta
             property="og:image"
-            content="https://opengraph.b-cdn.net/production/images/1e44c2ab-7347-4dca-836e-2d966e61b2a7.png"
+            content="https://opengraph.b-cdn.net/production/images/1e44c2ab-7347-4dca-836e-2d966e61b2a7.png?token=i5CdVQvFqBvXUEZmwRd4zFVSWAO4TjyuIalB6f0FYdQ&height=630&width=1200&expires=33278338970"
         />
 
         <!-- Twitter Meta Tags -->
@@ -27,7 +32,7 @@
         />
         <meta
             name="twitter:image"
-            content="https://opengraph.b-cdn.net/production/images/1e44c2ab-7347-4dca-836e-2d966e61b2a7.png"
+            content="https://opengraph.b-cdn.net/production/images/1e44c2ab-7347-4dca-836e-2d966e61b2a7.png?token=i5CdVQvFqBvXUEZmwRd4zFVSWAO4TjyuIalB6f0FYdQ&height=630&width=1200&expires=33278338970"
         />
 
       <script type="module" crossorigin src="/push-portal/pr-preview/pr-12/assets/main-D50d88IP.js"></script>
