chore: update logos and images for rebranding

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <title>Push Portal</title>
         <meta
             name="description"
-            content="Push Portal (Previously EPNS) | Communication Protocol of Web3
+            content="Push Portal | Communication Protocol of Web3
         "
         />
 
@@ -22,12 +22,12 @@
         <meta property="og:title" content="Push Portal" />
         <meta
             property="og:description"
-            content="Push Portal (Previously EPNS) | Communication Protocol of Web3
+            content="Push Portal | Communication Protocol of Web3
         "
         />
         <meta
             property="og:image"
-            content="https://opengraph.b-cdn.net/production/images/cc7702ad-595a-4d26-ae54-9309a2c9f6aa.png?token=CBq5Ke9jm230h7PvaSX-Iy2BX_DMvIez2GusAQacsCg&height=630&width=1200&expires=33278331680"
+            content="./static/assets/website/preview/home-preview.png"
         />
 
         <!-- Twitter Meta Tags -->
@@ -37,12 +37,12 @@
         <meta name="twitter:title" content="Push Portal" />
         <meta
             name="twitter:description"
-            content="Push Portal (Previously EPNS) | Communication Protocol of Web3
+            content="Push Portal | Communication Protocol of Web3
         "
         />
         <meta
             name="twitter:image"
-            content="https://opengraph.b-cdn.net/production/images/cc7702ad-595a-4d26-ae54-9309a2c9f6aa.png?token=CBq5Ke9jm230h7PvaSX-Iy2BX_DMvIez2GusAQacsCg&height=630&width=1200&expires=33278331680"
+            content="./static/assets/website/preview/home-preview.png"
         />
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
