--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             content="Push Portal | Communication Protocol of Web3"
         />
 
+        <!--Google Fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
         <!-- Facebook Meta Tags -->
         <meta property="og:url" content="https://portal.push.org" />
         <meta property="og:type" content="website" />
