--- a/rewards.html
+++ b/rewards.html
@@ -10,6 +10,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Push Chain Rewards S2</title>
 
+        <!--Google Fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
         <!-- Open Graph Meta Tags -->
         <meta property="og:url" content="https://portal.push.org/rewards" />
         <meta property="og:type" content="website" />
