chore: update title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <title>Push Portal</title>
         <meta
             name="description"
-            content="Push Portal | Communication Protocol of Web3"
+            content="Push Portal | Explore & Unlock Seasonal Rewards on Push Chain"
         />
 
         <!--Google Fonts-->
@@ -25,7 +25,7 @@
         <meta property="og:title" content="Push Portal" />
         <meta
             property="og:description"
-            content="Push Portal | Communication Protocol of Web3"
+            content="Push Portal | Explore & Unlock Seasonal Rewards on Push Chain"
         />
         <meta
             property="og:image"
@@ -39,7 +39,7 @@
         <meta name="twitter:title" content="Push Portal" />
         <meta
             name="twitter:description"
-            content="Push Portal | Communication Protocol of Web3"
+            content="Push Portal | Explore & Unlock Seasonal Rewards on Push Chain"
         />
         <meta
             name="twitter:image"
